# astrology-ai

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  main.py  pyproject.toml
.cursor/rules/: .cursorrules  astrology-patterns.md  code-style.md  error-handling.md  kerykeion-integration.md
.github/: copilot-instructions.md
ai-agents/: aspect_explainer_agent.py  orchestrator_agent.py
ai_agents/: __init__.py  astrology_specialist_agent.py  chart_interpreter_agent.py  relationship_analyst_agent.py
api/: __init__.py  aspects_router.py  auth.py  birth_chart_router.py  charts_router.py  conversation_router.py  dependencies.py  relationships_router.py  subscription_router.py  webhook_router.py  websocket_router.py
cache/: kerykeion_geonames_cache.sqlite
config/: __init__.py  settings.py
constants/: __init__.py  limits.py  messages.py
core/: __init__.py  error_handlers.py  exceptions.py
middleware/: auth.py
migrations/: 001_create_ai_assistant_tables.sql  002_simplify_to_mvp_schema.sql  003_add_conversation_chart_relations.sql  004_add_subscription_tables.sql  005_simplify_subscription_schema.sql  006_usage_based_purchases.sql
models/: ai.py  astrology.py  database.py  subscription.py
scripts/: backfill_classic_theme.py  content-strategy.md  export_users_for_email.py  setup_email_campaigns.py
services/: aspects.py  birth_chart.py  charts.py  compatibility.py  database.py  date_parser.py  location_resolver.py  relationships.py  subscription.py  usage_tracker.py
utils/: __init__.py  chart_data_extractor.py  token_monitor.py
(+16 files in other folders)
