[project]
name = "astrology-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.2.0",
    "fastapi>=0.121.1",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
    "geopy>=2.4.0",
    "timezonefinder>=6.2.0",
    "stripe>=11.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
